--- a/catalog.html
+++ b/catalog.html
@@ -107,7 +107,7 @@
     </h1>
 
     <section class="breadcrumbs">
-      <h2 class="visually__hidden">Навигация по сайту</h2>
+      <h2 class="visually-hidden">Навигация по сайту</h2>
       <a class="breadcrumbs__link" href="index.html">Главная</a>
       <a class="breadcrumbs__link" href="#">Каталог товаров</a>
       <a class="breadcrumbs__link">Моноподы для селфи</a>
@@ -212,7 +212,7 @@
 
       <article class="product-card">
         <div class="product-card__new">New</div>
-        <img class="product-card__image" src="img/product1.png" width="360" height="380" alt="Любительская селфи-палка">
+        <img class="product-card__image" src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
         <a class="product-card__link" href="#">Любительская селфи-палка</a>
         <span class="product-card__price">500 руб.</span>
 
