--- a/index.html
+++ b/index.html
@@ -102,33 +102,29 @@
 
   </nav>
 
-
-
      </div>
+
 
      <article class="slider">
        <input class="slider__check1" type="radio" name="radio-check" id="check1" checked>
        <input class="slider__check2" type="radio" name="radio-check" id="check2">
        <input class="slider__check3" type="radio" name="radio-check" id="check3">
 
-       <section class="slider__slide">
-
-         <p class="slider__number">
-           01
-         </p>
+       <section class="slider__slide slider__slide--first">
+        <div class="slider__content">
          <h2 class="slider__title">
-           Делай селфи, как Бен Стиллер!
+           Делай селфи, как&nbsp;Бен&nbsp;Стиллер!
          </h2>
          <p class="slider__description">
            Самая длинная палка для селфи доступна в&nbsp;нашем магазине.
-           Восемь (Восемь, Карл!) метров длиной и&nbsp;весом всего 5&nbsp;килограмм.
+           Восемь&nbsp;(Восемь, Карл!) метров длиной и&nbsp;весом всего 5&nbsp;килограмм.
          </p>
-         <a class="button" href="#">
+         <a class="button  button--slider" href="#">
            Подробнее
          </a>
 
          <table class="slider__info">
-           <tr class="slider__row">
+           <tr class="slider__row  slider__row--top">
              <th>8,5 м</th>
              <th>5 кг</th>
              <th>Карбон</th>
@@ -139,22 +135,20 @@
              <td>Материал</td>
            </tr>
          </table>
-
+        </div>
        </section>
 
-       <section class="slider__slide">
+       <section class="slider__slide  slider__slide--second">
 
-         <p class="slider__number">
-           02
-         </p>
+         <div class="slider__content">
          <h2 class="slider__title">
-           Худеем правильно!
+           Худеем<br> правильно!
          </h2>
          <p class="slider__description">
            Мотивирующие фитнес-браслеты помогут найти в&nbsp;себе силы
            не&nbsp;пропускать занятия и&nbsp;соблюдать диету.
          </p>
-         <a class="button" href="#">
+         <a class="button  button--slider" href="#">
            Подробнее
          </a>
 
@@ -166,22 +160,19 @@
              <td>Без подзарядки</td>
            </tr>
          </table>
-
+        </div>
        </section>
 
-       <section class="slider__slide">
+       <section class="slider__slide  slider__slide--third">
 
-         <p class="slider__number">
-           03
-         </p>
+         <div class="slider__content">
          <h2 class="slider__title">
            Порхает как бабочка, жалит как пчела!
          </h2>
          <p class="slider__description">
-           Этот обычный, на&nbsp;первый взгляд, квадрокоптер оснащен
-           мощным лазером, замаскированным под стандартную камеру.
+           Этот обычный, на&nbsp;первый взгляд, квадрокоптер оснащен мощным&nbsp;лазером, замаскированным под стандартную камеру.
          </p>
-         <a class="button" href="#">
+         <a class="button  button--slider" href="#">
            Подробнее
          </a>
 
@@ -195,7 +186,7 @@
              <td>Радиус поражения</td>
            </tr>
          </table>
-
+        </div>
        </section>
 
        <div class="slider__controls">
@@ -207,14 +198,13 @@
      </article>
 
 
+
    </header>
 
    <main class="main-content">
 
      <section class="popular-goods">
-       <h2 class="visually-hidden">Список наших товаров:</h2>
-       <!--  Сомневаюсь насчет разметки этого блока
-      наверное лучше псевдоэлементы -->
+
        <a class="popular-goods__link" href="#">
          <img class="popular-goods__image" src="img/popular-1.svg" alt="">
          Виртуальная реальность
