--- a/index.html
+++ b/index.html
@@ -230,30 +230,51 @@
      </section>
 
      <article class="services">
+
+       <div class="services__inner">
+
        <input class="services__check1" type="radio" name="radio" id="radio1" checked>
        <input class="services__check2" type="radio" name="radio" id="radio2">
        <input class="services__check3" type="radio" name="radio" id="radio3">
 
        <div class="services__controls">
-         <label class="services__control  button" for="radio1">Доставка</label>
-         <label class="services__control  button" for="radio2">Гарантия</label>
-         <label class="services__control  button" for="radio3">Кредит</label>
+
+         <label class="services__control" for="radio1">
+           <span class="button  button--services">
+             Доставка
+           </span>
+         </label>
+
+         <label class="services__control" for="radio2">
+           <span class="button  button--services">
+             Гарантия
+           </span>
+         </label>
+
+         <label class="services__control" for="radio3">
+           <span class="button  button--services">
+             Кредит
+           </span>
+         </label>
+
        </div>
 
-      <div class="services__inner">
+      <div class="services__slides">
+        <div class="services__slides-inner">
 
-       <section class="services__slide  services__slide--delivery">
+
+       <section class="services__slide    services__slide--delivery">
          <h2 class="services__title">Доставка</h2>
          <p class="services__description">
            Мы&nbsp;с&nbsp;удовольствием доставим ваш товар прямо к&nbsp;вашему подъезду совершенно бесплатно! Ведь мы&nbsp;неплохо заработаем, поднимая его на&nbsp;ваш этаж.
          </p>
        </section>
 
-       <section class="services__slide  services__slide--guarantee">
+       <section class="services__slide  services__slide--warranty">
          <h2 class="services__title">Гарантия</h2>
          <p class="services__description">
            Если из-за возгорания купленного у&nbsp;нас товара у&nbsp;вас сгорит дом&nbsp;&mdash; не&nbsp;переживайте, мы&nbsp;выдадим вам новый.
-           Товар, не&nbsp;дом, конечно&nbsp;же.
+           Товар,&nbsp;не&nbsp;дом, конечно&nbsp;же.
          </p>
        </section>
 
@@ -261,13 +282,14 @@
          <h2 class="services__title">Кредит</h2>
          <p class="services__description">
            Залезть в&nbsp;долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные
-           условия кредита. Выгодные для нашего банка, разумеется.
+           условия&nbsp;кредита. Выгодные для нашего банка, разумеется.
          </p>
        </section>
 
+        </div>
        </div>
-       
 
+      </div>
      </article>
 
      <section class="popular-brands">
