--- a/index.html
+++ b/index.html
@@ -293,10 +293,10 @@
      </article>
 
      <section class="popular-brands">
-       <a class="popular-brands__link  popular-brands__link--dji" href="#">DJI</a>
-       <a class="popular-brands__link  popular-brands__link--spg" href="#">SPGadgets</a>
-       <a class="popular-brands__link  popular-brands__link--gopro" href="#">GoPro</a>
-       <a class="popular-brands__link  popular-brands__link--vive" href="#">Vive</a>
+       <a class="popular-brands__link  popular-brands__link--brand1" href="#">DJI</a>
+       <a class="popular-brands__link  popular-brands__link--brand2" href="#">SPGadgets</a>
+       <a class="popular-brands__link  popular-brands__link--brand3" href="#">GoPro</a>
+       <a class="popular-brands__link  popular-brands__link--brand4" href="#">Vive</a>
      </section>
 
      <article class="info-block">
@@ -310,9 +310,15 @@
            Мы&nbsp;можем доставить ваш товар в&nbsp;самые отдаленные точки России! DEVICE работает со&nbsp;многими транспортными компаниями:
          </p>
          <ul class="info-block__list">
-           <li class="info-block__item">Деловые линии</li>
-           <li class="info-block__item">Автотрейдинг</li>
-           <li class="info-block__item">ЖелДорЭкспедиция</li>
+           <li class="info-block__item">
+             Деловые линии
+           </li>
+           <li class="info-block__item">
+             Автотрейдинг
+           </li>
+           <li class="info-block__item">
+             ЖелДорЭкспедиция
+           </li>
          </ul>
          <a class="button" href="#">Подробнее о нас</a>
        </section>
