--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
      <article class="info-block">
 
-       <section class="info-block__column">
+       <section class="info-block__column  info-block__column--left">
          <h2 class="info-block__title">О нас</h2>
          <p class="info-block__description">
            Огромный выбор гаджетов не&nbsp;оставит равнодушным гика, который есть в&nbsp;каждом из&nbsp;нас.
@@ -311,7 +311,7 @@
          </p>
          <ul class="info-block__list">
            <li class="info-block__item">
-             Деловые линии
+             Деловые Линии
            </li>
            <li class="info-block__item">
              Автотрейдинг
@@ -320,7 +320,7 @@
              ЖелДорЭкспедиция
            </li>
          </ul>
-         <a class="button" href="#">Подробнее о нас</a>
+         <a class="button  button--info" href="#">Подробнее о нас</a>
        </section>
 
        <section class="info-block__column">
@@ -329,7 +329,7 @@
            Вы&nbsp;можете забрать товар сами, заехав в&nbsp;наш офис. Заодно, вы&nbsp;сможете проверить работоспособность покупки. Всякое бывает.
          </p>
          <a class="info-block__map" href=""></a>
-         <a class="button" href="#">Напишите нам</a>
+         <a class="button  button--info" href="#">Напишите нам</a>
        </section>
 
      </article>
