--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   </head>
   <body>
 
+    <svg style="display:none">
+      <symbol id="cart" viewBox="0 0 12 12"><path d="M11.864 3.017a.429.429 0 0 0-.327-.154H9.225V4.09c0 .563-.484 1.022-1.08 1.022-.594 0-1.078-.458-1.078-1.022V2.863H4.909V4.09c0 .563-.485 1.022-1.08 1.022-.595 0-1.078-.458-1.078-1.022V2.863H.438a.43.43 0 0 0-.327.154.472.472 0 0 0-.108.358l.776 7.134c.015.806.642 1.455 1.411 1.455h7.595c.77 0 1.396-.649 1.411-1.455l.776-7.134a.476.476 0 0 0-.108-.358z"/><path d="M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z"/></symbol>
+      <symbol id="compare" viewBox="0 0 10 10"><path d="M8 2h1.984v8H8zM0 3h1.984v7H0zm4-3h2v10H4z"/></symbol>
+      <symbol id="user" viewBox="0 0 13 12"><path d="M.032 12h12.937c-.163-2.643-2.074-4.837-4.671-5.543a3.47 3.47 0 0 0 1.687-2.972 3.485 3.485 0 0 0-6.97 0c0 1.264.68 2.361 1.688 2.972C2.106 7.163.194 9.357.032 12z"/></symbol>
+      <symbol id="logo-html" viewBox="0 0 26.943 34.09"><path d="M13.62.017L13.472 0 0 1.412v24.661l13.473 8.017 13.43-7.99.042-.025V1.412L13.62.017zm11.399 12.11L13.495 5.334l-.001-.104-.087.05-.088-.056v.109L1.925 12.118V3.147l11.548-1.212L25.02 3.147v8.98zm-11.614-5.34L24.923 13.5l-4.479 2.64-7.093-4.221-.014 1.415 5.904 3.513-.86.507-5.03-2.992-.014 1.415 3.827 2.275-.782.523-3.031-1.787-.014 1.413 1.853 1.091-1.8 1.081-11.356-6.751 11.371-6.835zm-11.48 8.34l11.411 6.791.016 1.044-7.942-4.728-.015 1.416 7.979 4.795.018 1.076-7.973-4.74-.013 1.414 8.021 4.822.046.025 8.143-4.872-.011-5.177 3.415-2.036v10.021L13.472 31.85 1.925 24.979v-9.852z"/></symbol>
+      <symbol id="fb" viewBox="0 0 32 32"><path d="M16 0C7.164 0 0 7.163 0 16s7.164 16 16 16c8.837 0 16-7.164 16-16S24.837 0 16 0zm4.062 9.455h-3.021v3.444h3.021v3.445h-3.021v8.61H14.02v-8.61H11v-3.445h3.021V9.455c0-1.902 1.353-3.445 3.021-3.445h3.021v3.445z"/></symbol>
+      <symbol id="twitter" viewBox="0 0 32 32"><path d="M16 0C7.164 0 0 7.164 0 16c0 8.837 7.164 16 16 16 8.837 0 16-7.163 16-16 0-8.836-7.163-16-16-16zm7.944 12.809c-.251 6.516-3.463 10.832-10.992 10.702h-.486c-.447 0-4.543-.443-5.344-1.823 2.479.19 4.247-.406 5.12-1.136-1.048-.289-2.923-.461-3.251-2.848.384.104.618.221 1.299.113-1.307-.824-2.758-1.519-2.679-3.643.311.317 1.164.518 1.46.457-.768-.233-2.149-3.244-.974-4.781 1.984 1.79 4.075 3.482 7.804 3.643.227-2.214 1.24-3.699 3.168-4.325 1.84-.479 3.255.26 3.901 1.138.737-.224 1.453-.466 2.193-.685-.004.833-.569 1.463-.935 1.709.747.165 1.423-.475 1.423-.475-.184.963-1.094 1.725-1.707 1.954z"/></symbol>
+      <symbol id="ig" viewBox="0 0 32 32"><g fill="#FFF"><path d="M20.916 16a4.939 4.939 0 1 1-9.878 0c0-.394.052-.773.14-1.14h-.898v6.838h11.396V14.86h-.897c.085.367.136.746.136 1.14z"/><path d="M15.978 18.66c1.466 0 2.66-1.194 2.66-2.66s-1.194-2.66-2.66-2.66c-1.466 0-2.66 1.194-2.66 2.66s1.193 2.66 2.66 2.66zm2.659-8.358h3.04v3.04h-3.04z"/><path d="M16 0C7.164 0 0 7.164 0 16c0 8.837 7.164 16 16 16 8.837 0 16-7.163 16-16 0-8.836-7.163-16-16-16zm7.955 21.698a2.286 2.286 0 0 1-2.28 2.28H10.28A2.287 2.287 0 0 1 8 21.698V10.302a2.287 2.287 0 0 1 2.28-2.28h11.395a2.287 2.287 0 0 1 2.28 2.28v11.396z"/></g></symbol>
+    </svg>
+
    <header class="main-header">
 
      <div class="main-header__navigation">
@@ -339,12 +349,23 @@
    <footer class="footer">
 
      <div class="footer__inner">
-       <a class="logo1" href="index.html">Device</a>
+       <a class="logo  logo--footer" href="index.html">Device</a>
        <div class="footer__user-block">
-         <a class="footer__link  footer__link--login" href="#">Войти</a>
-         <a class="footer__link  footer__link--logout" href="#">Выйти</a>
-         <a class="footer__compare" href="#">Сравнить</a>
-         <a class="footer__cart" href="#">Корзина</a>
+         <a class="footer__link" href="#">
+           <svg class="footer__icon  footer__icon--login" width="13" height="12">
+             <use xlink:href="#user">
+           </svg>
+           Войти</a>
+         <a class="footer__link" href="#">
+           <svg class="footer__icon   footer__icon--compare" width="10" height="10">
+             <use xlink:href="#compare">
+           </svg>
+           Сравнить</a>
+         <a class="footer__link" href="#">
+           <svg class="footer__icon  footer__icon--cart" width="12" height="12">
+             <use xlink:href="#cart">
+           </svg>
+           Корзина</a>
        </div>
      </div>
 
@@ -357,27 +378,37 @@
          <a class="footer__nav-link" href="#">Гарантия</a>
          <a class="footer__nav-link" href="#">Контакты</a>
        </div>
-       <a class="footer__link" href="tel:+7(495)495-95-95">Тел.: +7 (495) 495-95-95</a>
+       <a class="footer__link  footer__link--phone" href="tel:+7(495)495-95-95">Тел.: +7 (495) 495-95-95</a>
      </div>
 
      <div class="footer__inner">
        <section class="socials">
-         <h2 class="visually-hidden">Мы в социальных сетях</h2>
-         <a class="socials__link  socials__link--fb" href="#">Facebook</a>
-         <a class="socials__link  socials__link--ig" href="#">Instagram</a>
-         <a class="socials__link  socials__link--tw" href="#">Twitter</a>
+         <a class="socials__link" href="#">
+           <svg class="socials__icon" width="32" height="32">
+             <use xlink:href="#fb">
+           </svg>
+           Facebook</a>
+         <a class="socials__link" href="#">
+           <svg class="socials__icon" width="32" height="32">
+             <use xlink:href="#ig">
+           </svg>
+           Instagram</a>
+         <a class="socials__link" href="#">
+           <svg class="socials__icon" width="32" height="32">
+             <use xlink:href="#twitter">
+           </svg>
+           Twitter</a>
        </section>
-       <a class="logo-academy" href="https://htmlacademy.ru/intensive/htmlcss"></a>
+       <a class="footer__link  footer__link--academy" href="https://htmlacademy.ru/intensive/htmlcss"></a>
      </div>
-
 
    </footer>
 
 <!-- Модальное окно -->
-   <article class="modal-feedback">
-     <div class="modal-feedback__close"></div>
+   <article class="feedback">
+     <button class="feedback__close"></button>
 
-     <form class="feedback" method="post" action="#">
+     <form class="feedback__form" method="post" action="#">
 
        <label class="feedback__label  feedback__label--name">
          Ваше имя:<br>
@@ -385,16 +416,16 @@
        </label>
 
        <label class="feedback__label  feedback__label--email">
-         Ваш email:<br>
+         Ваш e-mail:<br>
          <input class="feedback__input" type="email" name="email" value="" placeholder="Для отправки ответа" required>
        </label>
 
        <label class="feedback__label">
          Текст письма:<br>
-         <textarea class="feedback__text-field" name="text" placeholder="В свободной форме"></textarea>
+         <textarea class="feedback__input  feedback__input--field" name="text" placeholder="В свободной форме"></textarea>
        </label>
 
-     <button class="button" type="submit">Отправить</button>
+     <button class="button  button--feedback" type="submit">Отправить</button>
    </form>
  </article>
 
