--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
-
+<!-- можно как-нито попроще убрать отсюда svg? -->
     <svg style="display:none">
       <symbol id="cart" viewBox="0 0 12 12"><path d="M11.864 3.017a.429.429 0 0 0-.327-.154H9.225V4.09c0 .563-.484 1.022-1.08 1.022-.594 0-1.078-.458-1.078-1.022V2.863H4.909V4.09c0 .563-.485 1.022-1.08 1.022-.595 0-1.078-.458-1.078-1.022V2.863H.438a.43.43 0 0 0-.327.154.472.472 0 0 0-.108.358l.776 7.134c.015.806.642 1.455 1.411 1.455h7.595c.77 0 1.396-.649 1.411-1.455l.776-7.134a.476.476 0 0 0-.108-.358z"/><path d="M3.829 4.499c.239 0 .433-.184.433-.409V1.84c0-.632.672-1.022 1.295-1.022h1.079c.655 0 1.078.401 1.078 1.022v2.25c0 .225.194.409.431.409.239 0 .433-.184.433-.409V1.84C8.577.773 7.761 0 6.636 0H5.557c-1.19 0-2.159.826-2.159 1.84v2.25c0 .225.194.409.431.409z"/></symbol>
       <symbol id="compare" viewBox="0 0 10 10"><path d="M8 2h1.984v8H8zM0 3h1.984v7H0zm4-3h2v10H4z"/></symbol>
@@ -36,9 +36,26 @@
        </form>
 
        <div class="user-block">
-           <a class="user-block__link   user-block__link--login" href="#">Войти</a>
-           <a class="user-block__link  user-block__link--compare"  href="#">Сравнить</a>
-           <a class="user-block__link  user-block__link--cart" href="#">Корзина</a>
+           <a class="user-block__link   user-block__link--login" href="#">
+             <svg class="user-block__icon  user-block__icon--login" width="13" height="12">
+               <use xlink:href="#user">
+             </svg>
+             Войти
+           </a>
+
+           <a class="user-block__link  user-block__link--compare"  href="#">
+             <svg class="user-block__icon" width="10" height="10">
+               <use xlink:href="#compare">
+             </svg>
+             Сравнить
+           </a>
+
+           <a class="user-block__link  user-block__link--cart" href="#">
+             <svg class="user-block__icon" width="12" height="12">
+               <use xlink:href="#cart">
+             </svg>
+             Корзина
+           </a>
        </div>
 
 
@@ -58,7 +75,7 @@
                 </a>
               </li>
               <li class="sub-nav__item">
-                <a class="sub-nav__link" href="#">
+                <a class="sub-nav__link" href="catalog.html">
                   Моноподы для селфи
                 </a>
               </li>
